<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_inventory"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_add_inventory" />
        <item
            android:id="@+id/nav_distribution"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_add_distribution" />

        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_add_order" />

        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_report" />
    </group>
</menu>