<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.og.medicare.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_inventory"
        android:name="com.og.medicare.ui.inventory.Inventory"
        android:label="@string/menu_add_inventory"
        tools:layout="@layout/fragment_inventory" />

    <fragment
        android:id="@+id/nav_distribution"
        android:name="com.og.medicare.ui.distribution.DistributionFragment"
        android:label="@string/menu_add_distribution"
        tools:layout="@layout/fragment_distribution" />

    <fragment
        android:id="@+id/nav_order"
        android:name="com.og.medicare.ui.order.OrderFragment"
        android:label="@string/menu_add_order"
        tools:layout="@layout/fragment_order" />
</navigation>